1.5/_sources/modules/generated/sklearn.tree.DecisionTreeClassifier.rst.txt
DecisionTreeClassifier
======================

.. currentmodule:: sklearn.tree

.. autoclass:: DecisionTreeClassifier
   :members:
   :inherited-members:
   :special-members: __call__

.. minigallery:: sklearn.tree.DecisionTreeClassifier sklearn.tree.DecisionTreeClassifier.__init__ sklearn.tree.DecisionTreeClassifier.apply sklearn.tree.DecisionTreeClassifier.cost_complexity_pruning_path sklearn.tree.DecisionTreeClassifier.decision_path sklearn.tree.DecisionTreeClassifier.fit sklearn.tree.DecisionTreeClassifier.get_depth sklearn.tree.DecisionTreeClassifier.get_metadata_routing sklearn.tree.DecisionTreeClassifier.get_n_leaves sklearn.tree.DecisionTreeClassifier.get_params sklearn.tree.DecisionTreeClassifier.predict sklearn.tree.DecisionTreeClassifier.predict_log_proba sklearn.tree.DecisionTreeClassifier.predict_proba sklearn.tree.DecisionTreeClassifier.score sklearn.tree.DecisionTreeClassifier.set_fit_request sklearn.tree.DecisionTreeClassifier.set_params sklearn.tree.DecisionTreeClassifier.set_predict_proba_request sklearn.tree.DecisionTreeClassifier.set_predict_request sklearn.tree.DecisionTreeClassifier.set_score_request 
   :add-heading: Gallery examples
   :heading-level: -