1.7/_sources/modules/generated/sklearn.tree.DecisionTreeClassifier.rst.txt
DecisionTreeClassifier
======================

.. currentmodule:: sklearn.tree

.. autoclass:: DecisionTreeClassifier
   :members:
   :inherited-members:
   :special-members: __call__

.. minigallery:: sklearn.tree.DecisionTreeClassifier sklearn.tree.DecisionTreeClassifier.__delattr__ sklearn.tree.DecisionTreeClassifier.__dir__ sklearn.tree.DecisionTreeClassifier.__eq__ sklearn.tree.DecisionTreeClassifier.__format__ sklearn.tree.DecisionTreeClassifier.__ge__ sklearn.tree.DecisionTreeClassifier.__getattribute__ sklearn.tree.DecisionTreeClassifier.__getstate__ sklearn.tree.DecisionTreeClassifier.__gt__ sklearn.tree.DecisionTreeClassifier.__hash__ sklearn.tree.DecisionTreeClassifier.__init__ sklearn.tree.DecisionTreeClassifier.__init_subclass__ sklearn.tree.DecisionTreeClassifier.__le__ sklearn.tree.DecisionTreeClassifier.__lt__ sklearn.tree.DecisionTreeClassifier.__ne__ sklearn.tree.DecisionTreeClassifier.__new__ sklearn.tree.DecisionTreeClassifier.__reduce__ sklearn.tree.DecisionTreeClassifier.__reduce_ex__ sklearn.tree.DecisionTreeClassifier.__repr__ sklearn.tree.DecisionTreeClassifier.__setattr__ sklearn.tree.DecisionTreeClassifier.__setstate__ sklearn.tree.DecisionTreeClassifier.__sizeof__ sklearn.tree.DecisionTreeClassifier.__sklearn_clone__ sklearn.tree.DecisionTreeClassifier.__sklearn_tags__ sklearn.tree.DecisionTreeClassifier.__str__ sklearn.tree.DecisionTreeClassifier.__subclasshook__ sklearn.tree.DecisionTreeClassifier._build_request_for_signature sklearn.tree.DecisionTreeClassifier._compute_missing_values_in_feature_mask sklearn.tree.DecisionTreeClassifier._fit sklearn.tree.DecisionTreeClassifier._get_default_requests sklearn.tree.DecisionTreeClassifier._get_doc_link sklearn.tree.DecisionTreeClassifier._get_metadata_request sklearn.tree.DecisionTreeClassifier._get_param_names sklearn.tree.DecisionTreeClassifier._get_params_html sklearn.tree.DecisionTreeClassifier._html_repr sklearn.tree.DecisionTreeClassifier._prune_tree sklearn.tree.DecisionTreeClassifier._repr_html_inner sklearn.tree.DecisionTreeClassifier._repr_mimebundle_ sklearn.tree.DecisionTreeClassifier._support_missing_values sklearn.tree.DecisionTreeClassifier._validate_X_predict sklearn.tree.DecisionTreeClassifier._validate_params sklearn.tree.DecisionTreeClassifier.apply sklearn.tree.DecisionTreeClassifier.cost_complexity_pruning_path sklearn.tree.DecisionTreeClassifier.decision_path sklearn.tree.DecisionTreeClassifier.fit sklearn.tree.DecisionTreeClassifier.get_depth sklearn.tree.DecisionTreeClassifier.get_metadata_routing sklearn.tree.DecisionTreeClassifier.get_n_leaves sklearn.tree.DecisionTreeClassifier.get_params sklearn.tree.DecisionTreeClassifier.predict sklearn.tree.DecisionTreeClassifier.predict_log_proba sklearn.tree.DecisionTreeClassifier.predict_proba sklearn.tree.DecisionTreeClassifier.score sklearn.tree.DecisionTreeClassifier.set_fit_request sklearn.tree.DecisionTreeClassifier.set_params sklearn.tree.DecisionTreeClassifier.set_score_request 
   :add-heading: Gallery examples
   :heading-level: -